--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,15 @@
 ---
-
-import { Link } from '../components/Link';
-import Layout from '../layouts/Layout.astro';
-
+import { Link } from "../components/Link";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Elloani Ross Pitogo | Software Engineer">
-	<main>
-		<h1>Hi. My name is <span>Elloani Ross Arcenal Pitogo</span></h1>
-		<Link label="Contact me" href="https://www.linkedin.com/in/pitogoelloaniross/" client:load />
-	</main>
+  <main>
+    <h1>Hi. My name is <span>Elloani Ross Arcenal Pitogo</span></h1>
+    <Link
+      label="Contact me"
+      href="https://www.linkedin.com/in/pitogoelloaniross/"
+      client:load
+    />
+  </main>
 </Layout>
-
