--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
+import "../styles/global.css";
 import { Link } from "../components/Link";
 import Layout from "../layouts/Layout.astro";
+import { Button } from "@/components/ui/button";
 ---
 
 <Layout title="Elloani Ross Pitogo | Software Engineer">
@@ -11,5 +13,6 @@ import Layout from "../layouts/Layout.astro";
       href="https://www.linkedin.com/in/pitogoelloaniross/"
       client:load
     />
+    <Button>View my CV</Button>
   </main>
 </Layout>
