--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,19 @@
 ---
-import { Link } from "../components/Link";
 import Layout from "../layouts/Layout.astro";
-import { Button } from "@/components/ui/button";
 ---
 
 <Layout title="Elloani Ross Pitogo | Software Engineer">
-  <main>
-    <h1>Hi. My name is <span>Elloani Ross Arcenal Pitogo</span></h1>
-    <Link
-      label="Contact me"
-      href="https://www.linkedin.com/in/pitogoelloaniross/"
-      client:load
-    />
-    <Button>View my CV</Button>
+  <main
+    class="relative z-20 w-full max-w-4xl mx-auto mt-16 px-7 md:mt-24 lg:mt-32 xl:px-0"
+  >
+    <h1
+      class="mb-5 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white"
+    >
+      Hello, I'm <span>Elloani Pitogo</span>.
+    </h1>
+    <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
+      I'm a Software Engineer based in The Philippines. I focus in Front-End Web
+      Development for over 6 years now.
+    </p>
   </main>
 </Layout>
