--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,14 @@
 ---
 import "../styles/global.css";
 import { ModeToggle } from "@/components/ModeToggle";
+import { getLangFromUrl } from "../i18n/utils";
 
 interface Props {
   title: string;
 }
 
 const { title } = Astro.props;
+const lang = getLangFromUrl(Astro.url);
 ---
 
 <!doctype html>
@@ -34,7 +36,7 @@ const { title } = Astro.props;
   }
 </script>
 
-<html lang="en">
+<html lang={lang}>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Elloani Ross Pitogo's Portfolio" />
@@ -44,7 +46,6 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="bg-white text-zinc-900 dark:bg-neutral-950 dark:text-gray-400">
-    <ModeToggle client:load />
     <slot />
   </body>
 </html>
