--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 import { ModeToggle } from "@/components/ModeToggle";
+import { Icon } from "astro-icon/components";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -22,5 +23,13 @@ const t = useTranslations(lang);
     <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
       {t("hero.description")}
     </p>
+    <div class="flex gap-4">
+      <a href="https://github.com/thewanionly/" target="_blank">
+        <Icon name="github" class="text-2xl" />
+      </a>
+      <a href="https://www.linkedin.com/in/pitogoelloaniross/" target="_blank">
+        <Icon name="linkedin" class="text-2xl" />
+      </a>
+    </div>
   </main>
 </Layout>
