--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 import { ModeToggle } from "@/components/ModeToggle";
 import { Icon } from "astro-icon/components";
+import { Separator } from "@/components/ui/separator";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -20,10 +21,25 @@ const t = useTranslations(lang);
     >
       {t("hero.title")}
     </h1>
+
     <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
       {t("hero.description")}
     </p>
-    <div class="flex gap-4">
+
+    <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
+      My skills includes:
+    </p>
+    <ul
+      class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
+    >
+      <li>HTML, CSS, JavaScript</li>
+      <li>React.js</li>
+      <li>TypeScript</li>
+      <li>Next.js</li>
+      <li>and <a href="#skills">more...</a></li>
+    </ul>
+
+    <div class="flex gap-4 mt-5">
       <a href="https://github.com/thewanionly/" target="_blank">
         <Icon name="github" class="text-2xl" />
       </a>
@@ -31,5 +47,7 @@ const t = useTranslations(lang);
         <Icon name="linkedin" class="text-2xl" />
       </a>
     </div>
+
+    <Separator className="mt-12 w-[80%] mx-auto" />
   </main>
 </Layout>
