Reposition mode toggle to the right

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ const t = useTranslations(lang);
 
 <Layout title="Elloani Ross Pitogo | Software Engineer">
   <header class="relative z-20 w-full max-w-4xl mx-auto mt-8 px-7 xl:px-0">
-    <ModeToggle client:load />
+    <div class="flex justify-end">
+      <ModeToggle client:load />
+    </div>
   </header>
   <main
     class="relative z-20 w-full max-w-4xl mx-auto mt-16 px-7 md:mt-24 lg:mt-32 xl:px-0"
