--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,66 +12,95 @@ const t = useTranslations(lang);
 ---
 
 <Layout title="Elloani Ross Pitogo | Software Engineer">
-  <header class="relative z-20 w-full max-w-4xl mx-auto mt-8 px-7 xl:px-0">
-    <div class="flex justify-end">
-      <ModeToggle client:load />
-    </div>
-  </header>
-  <main
-    class="relative z-20 w-full max-w-4xl mx-auto mt-16 px-7 md:mt-24 lg:mt-32 xl:px-0"
-  >
-    <section id="hero" class="md:grid md:grid-cols-[1fr_max-content] md:gap-4">
-      <h1
-        class="mb-8 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white text-center md:text-start"
+  <div class="flex flex-col min-h-screen">
+    <header class="relative z-20 w-full max-w-4xl mx-auto mt-8 px-7 xl:px-0">
+      <div class="flex justify-end">
+        <ModeToggle client:load />
+      </div>
+    </header>
+    <main
+      class="flex-1 relative z-20 w-full max-w-4xl mx-auto mt-16 px-7 md:mt-24 lg:mt-32 xl:px-0"
+    >
+      <section
+        id="hero"
+        class="md:grid md:grid-cols-[1fr_max-content] md:gap-4"
       >
-        {t("hero.title")}
-      </h1>
+        <h1
+          class="mb-8 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white text-center md:text-start"
+        >
+          {t("hero.title")}
+        </h1>
 
-      <Image
-        class="w-[184px] h-[184px] object-cover md:w-[255px] md:h-[255px] mx-auto mb-4 md:row-span-4"
-        src={myImage}
-        alt="Elloani Ross Pitogo wearing beige long sleeve, sling bag, and watch with hands together placed in a table"
-        loading="eager"
-        decoding="auto"
-        style="border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;"
-      />
+        <Image
+          class="w-[184px] h-[184px] object-cover md:w-[255px] md:h-[255px] mx-auto mb-4 md:row-span-4"
+          src={myImage}
+          alt="Elloani Ross Pitogo wearing beige long sleeve, sling bag, and watch with hands together placed in a table"
+          loading="eager"
+          decoding="auto"
+          style="border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;"
+        />
 
-      <p
-        class="mb-6 text-base text-neutral-600 dark:text-neutral-400 text-center md:text-start"
-      >
-        {t("hero.description")}
-      </p>
-
-      <div>
         <p
-          class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200 text-center md:text-start"
+          class="mb-6 text-base text-neutral-600 dark:text-neutral-400 text-center md:text-start"
         >
-          My skills includes:
+          {t("hero.description")}
         </p>
-        <ul
-          class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400 text-center md:text-start"
-        >
-          <li>HTML, CSS, JavaScript</li>
-          <li>React.js</li>
-          <li>TypeScript</li>
-          <li>Next.js</li>
-          <li>and <a href="#skills">more...</a></li>
-        </ul>
-      </div>
 
-      <div class="flex gap-4 mt-5 justify-center md:justify-start">
-        <a href="https://github.com/thewanionly/" target="_blank">
-          <Icon name="github" class="text-2xl" />
-        </a>
-        <a
-          href="https://www.linkedin.com/in/pitogoelloaniross/"
-          target="_blank"
-        >
-          <Icon name="linkedin" class="text-2xl" />
-        </a>
-      </div>
-    </section>
+        <div>
+          <p
+            class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200 text-center md:text-start"
+          >
+            My skills includes:
+          </p>
+          <ul
+            class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400 text-center md:text-start"
+          >
+            <li>HTML, CSS, JavaScript</li>
+            <li>React.js</li>
+            <li>TypeScript</li>
+            <li>Next.js</li>
+            <li>and <a href="#skills">more...</a></li>
+          </ul>
+        </div>
 
-    <Separator className="mt-12 w-[80%] mx-auto" />
-  </main>
+        <div class="flex gap-4 mt-5 justify-center md:justify-start">
+          <a href="https://github.com/thewanionly/" target="_blank">
+            <Icon name="github" class="text-2xl" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/pitogoelloaniross/"
+            target="_blank"
+          >
+            <Icon name="linkedin" class="text-2xl" />
+          </a>
+        </div>
+      </section>
+
+      <Separator className="mt-12 w-[80%] mx-auto" />
+    </main>
+    <footer
+      class="bg-white border-t sm:mt-20 dark:bg-neutral-950 border-neutral-200 dark:border-neutral-800"
+    >
+      <div
+        class="container flex flex-col gap-4 items-center py-8 mx-auto px-7 max-w-7xl sm:flex-row sm:justify-between"
+      >
+        <p
+          class="mt-4 text-sm text-neutral-700 dark:text-neutral-100 sm:border-neutral-300 dark:sm:border-neutral-700 sm:mt-0"
+        >
+          © {new Date().getFullYear()}
+        </p>
+        <div class="flex gap-4 justify-center md:justify-start">
+          <a href="https://github.com/thewanionly/" target="_blank">
+            <Icon name="github" class="text-2xl" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/pitogoelloaniross/"
+            target="_blank"
+          >
+            <Icon name="linkedin" class="text-2xl" />
+          </a>
+        </div>
+      </div>
+    </footer>
+  </div>
 </Layout>
