--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import { getLangFromUrl } from "../i18n/utils";
 import Analytics from "@vercel/analytics/astro";
+import SpeedInsights from "@vercel/speed-insights/astro";
 
 interface Props {
   title: string;
@@ -45,6 +46,7 @@ const lang = getLangFromUrl(Astro.url);
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <Analytics />
+    <SpeedInsights />
   </head>
   <body class="bg-white text-zinc-900 dark:bg-neutral-950 dark:text-gray-400">
     <slot />
