--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const t = useTranslations(lang);
           <p
             class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200 text-center md:text-start"
           >
-            My skills includes:
+            {t("hero.skills.title")}
           </p>
           <ul
             class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400 text-center md:text-start"
@@ -61,7 +61,7 @@ const t = useTranslations(lang);
             <li>React.js</li>
             <li>TypeScript</li>
             <li>Next.js</li>
-            <li>and <a href="#skills">more...</a></li>
+            <li><a href="#skills">{t("hero.skills.and.more")}</a></li>
           </ul>
         </div>
 
