show langauge selector

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const t = useTranslations(lang);
   <div class="flex flex-col min-h-screen">
     <header class="relative z-20 w-full max-w-4xl mx-auto mt-8 px-7 xl:px-0">
       <div class="flex justify-end gap-4">
-        <!-- <LanguageSelector client:load /> -->
+        <LanguageSelector client:load />
         <ModeToggle client:load />
       </div>
     </header>
