--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,19 @@ const t = useTranslations(lang);
         </div>
       </section>
 
-      <Separator className="mt-12 w-[80%] mx-auto" />
+      <Separator className="my-12 w-[80%] mx-auto" />
+
+      <!-- <section id="projects" class="max-w-4xl mx-auto px-7 lg:px-0">
+        <h2
+          class="text-2xl font-bold leading-10 tracking-tight text-neutral-900 dark:text-neutral-100"
+        >
+          {t("projects.title")}
+        </h2>
+
+        <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
+          {t("projects.description")}
+        </p>
+      </section> -->
     </main>
     <footer
       class="bg-white border-t sm:mt-20 dark:bg-neutral-950 border-neutral-200 dark:border-neutral-800"
