--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,13 +67,13 @@ const t = useTranslations(lang);
 
         <div class="flex gap-4 mt-5 justify-center md:justify-start">
           <a href="https://github.com/thewanionly/" target="_blank">
-            <Icon name="github" class="text-2xl" />
+            <Icon name="github" class="text-2xl hover:text-white" />
           </a>
           <a
             href="https://www.linkedin.com/in/pitogoelloaniross/"
             target="_blank"
           >
-            <Icon name="linkedin" class="text-2xl" />
+            <Icon name="linkedin" class="text-2xl hover:text-white" />
           </a>
         </div>
       </section>
@@ -105,13 +105,13 @@ const t = useTranslations(lang);
         </p>
         <div class="flex gap-4 justify-center md:justify-start">
           <a href="https://github.com/thewanionly/" target="_blank">
-            <Icon name="github" class="text-2xl" />
+            <Icon name="github" class="text-xl hover:text-white" />
           </a>
           <a
             href="https://www.linkedin.com/in/pitogoelloaniross/"
             target="_blank"
           >
-            <Icon name="linkedin" class="text-2xl" />
+            <Icon name="linkedin" class="text-xl hover:text-white" />
           </a>
         </div>
       </div>
