Add CTA in projects section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import { Separator } from "@/components/ui/separator";
 import { Image } from "astro:assets";
 import myImage from "../assets/images/me.jpg";
 import { LanguageSelector } from "@/components/LanguageSelector";
+import { Link } from "@/components/Link";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -78,9 +79,9 @@ const t = useTranslations(lang);
         </div>
       </section>
 
-      <Separator className="my-12 w-[80%] mx-auto" />
+      <!-- <Separator className="my-12 w-[80%] mx-auto" />
 
-      <!-- <section id="projects" class="max-w-4xl mx-auto px-7 lg:px-0">
+      <section id="projects" class="max-w-4xl mx-auto px-7 lg:px-0">
         <h2
           class="text-2xl font-bold leading-10 tracking-tight text-neutral-900 dark:text-neutral-100"
         >
@@ -90,6 +91,15 @@ const t = useTranslations(lang);
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
           {t("projects.description")}
         </p>
+
+        <div class="flex items-center justify-center w-full py-5">
+          <Link
+            href="/projects"
+            className="inline-flex w-auto px-4 py-2 mt-5 text-xs font-semibold duration-300 ease-out border rounded-full bg-neutral-900 dark:bg-white dark:text-neutral-900 text-neutral-100 hover:border-neutral-700 border-neutral-900 dark:hover:border-neutral-300 hover:bg-white dark:hover:bg-black dark:hover:text-white hover:text-neutral-900 hover:no-underline"
+          >
+            {t("projects.cta")}
+          </Link>
+        </div>
       </section> -->
     </main>
     <footer
