--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,9 +79,9 @@ const t = useTranslations(lang);
         </div>
       </section>
 
-      <!-- <Separator className="my-12 w-[80%] mx-auto" />
+      <!-- <Separator className="my-12 w-[80%] mx-auto" /> -->
 
-      <section id="projects" class="max-w-4xl mx-auto px-7 lg:px-0">
+      <!-- <section id="projects" class="max-w-4xl mx-auto px-7 lg:px-0">
         <h2
           class="text-2xl font-bold leading-10 tracking-tight text-neutral-900 dark:text-neutral-100"
         >
@@ -100,10 +100,10 @@ const t = useTranslations(lang);
             {t("projects.cta")}
           </Link>
         </div>
-      </section> -->
+      </section>  -->
     </main>
     <footer
-      class="bg-white border-t sm:mt-20 dark:bg-neutral-950 border-neutral-200 dark:border-neutral-800"
+      class="my-12 bg-white border-t sm:mt-20 dark:bg-neutral-950 border-neutral-200 dark:border-neutral-800"
     >
       <div
         class="container flex flex-col gap-4 items-center py-8 mx-auto px-7 max-w-7xl sm:flex-row sm:justify-between"
