--- a/src/components/sections/hero.astro
+++ b/src/components/sections/hero.astro
@@ -10,7 +10,10 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<section id="hero" class="md:grid md:grid-cols-[1fr_max-content] md:gap-4">
+<section
+  id="hero"
+  class="md:grid md:grid-cols-[1fr_max-content] md:gap-x-6 md:gap-y-4"
+>
   <h1
     class="mb-8 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white text-center md:text-start"
   >
