--- a/src/components/sections/projects.astro
+++ b/src/components/sections/projects.astro
@@ -1,5 +1,6 @@
 ---
 import { getLangFromUrl, useTranslations } from "@/i18n/utils";
+import projects from "@/content/projects.json";
 
 import { Link } from "../Link";
 
@@ -17,6 +18,18 @@ const t = useTranslations(lang);
   <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
     {t("projects.description")}
   </p>
+
+  <ul
+    class="grid items-stretch w-full grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-7 mt-7"
+  >
+    {
+      projects.map((project) => (
+        <li>
+          <Link href={project.projectUrl}>{project.title}</Link>
+        </li>
+      ))
+    }
+  </ul>
 
   <div class="flex items-center justify-center w-full py-5">
     <Link
