Hide projects for now

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,8 +22,8 @@ import Layout from "../layouts/Layout.astro";
       class="flex-1 relative z-20 w-full max-w-4xl mx-auto mt-16 px-7 md:mt-24 lg:mt-32 xl:px-0"
     >
       <HeroSection />
-      <Separator className="my-12 w-[80%] mx-auto" />
-      <ProjectsSection />
+      <!-- <Separator className="my-12 w-[80%] mx-auto" />
+      <ProjectsSection /> -->
     </main>
     <footer
       class="my-12 bg-white border-t sm:mt-20 dark:bg-neutral-950 border-neutral-200 dark:border-neutral-800"
