--- a/src/components/sections/projects/projects.astro
+++ b/src/components/sections/projects/projects.astro
@@ -2,7 +2,8 @@
 import { getLangFromUrl, useTranslations } from "@/i18n/utils";
 import projects from "@/content/projects.json";
 
-import { Link } from "../Link";
+import { Link } from "@/components/Link";
+import { ProjectCard } from "./ProjectCard";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -25,7 +26,12 @@ const t = useTranslations(lang);
     {
       projects.map((project) => (
         <li>
-          <Link href={project.projectUrl}>{project.title}</Link>
+          <ProjectCard
+            title={project.title}
+            description={project.description}
+            image={project.image}
+            link={project.projectUrl}
+          />
         </li>
       ))
     }
